[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0" }
bevy-inspector-egui = { version = "0.21" }
#https://github.com/laundmo/bevy_screen_diagnostics
bevy_screen_diagnostics = { version = "0.4" }

rand = "0.8.5"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3